Created a common mechanism for handling absent entity (pattern matching based). Implemented the service API and prepared a DAO API for extraction in the future
