# src/main/resources/api/openapi.yaml
@@ -56,14 +56,18 @@ paths:
               $ref: '#/components/schemas/RestaurantData'
       responses:
         201:
-          $ref: '#/components/responses/RestaurantResponse'
-        400:
-          description: Bad request
+          description: Restaurant created
+          headers:
+            Location:
+              schema:
+                type: string
           content:
             application/json:
-              example: {
-                "message": "Restaurant with given name already exists"
-              }
+              schema:
+                type: object
+                nullable: true
+        409:
+          description: Restaurant with given name already exists
   /restaurants/{restaurantName}:
     parameters:
       - $ref: '#/components/parameters/path.RestaurantName'
@@ -128,6 +132,38 @@ paths:
           description: Rating updated
         404:
           description: Restaurant with given name not found
+  /restaurants/{restaurantName}/review:
+    parameters:
+      - $ref: '#/components/parameters/path.RestaurantName'
+    put:
+      summary: Add/update review of the restaurant
+      operationId: updateRestaurantReview
+      tags: [Restaurant entry]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                review:
+                  type: string
+              required:
+                - rating
+      responses:
+        204:
+          description: Review added/updated
+        404:
+          description: Restaurant with given name not found
+    delete:
+      summary: Delete review of the restaurant
+      operationId: deleteRestaurantReview
+      tags: [Restaurant entry]
+      responses:
+        204:
+          description: Review deleted
+        404:
+          description: Restaurant with given name not found
   /restaurants/{restaurantName}/visited:
     parameters:
       - $ref: '#/components/parameters/path.RestaurantName'
@@ -143,7 +179,7 @@ paths:
     delete:
       summary: Mark restaurant as not visited
       operationId: markRestaurantAsNotVisited
-      description: Additionally removes the rating from the restaurant entry
+      description: Additionally removes the review, rating and notes from the restaurant entry
       tags: [Restaurant entry]
       responses:
         204:
@@ -274,6 +310,8 @@ paths:
       responses:
         204:
           description: Note replaced
+        400:
+          description: Note index is not a positive integer
         404:
           description: Restaurant with given name not found
     delete:
@@ -283,6 +321,8 @@ paths:
       responses:
         204:
           description: Note removed
+        400:
+          description: Note index is not a positive integer
         404:
           description: Restaurant with given name not found
 
